arabic font style

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,2 +1,4 @@
 $theme: #41b883;
 $foreground: #000;
+$font-family-arabic: "Scheherazade", "Source Sans Pro", -apple-system,
+  BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
